--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.3",
+    "@mui/material": "^5.10.0",
     "@mui/styled-engine-sc": "^5.9.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.0",
+    "buffer": "^6.0.3",
+    "html5-file-selector": "^2.1.0",
     "react": "^18.2.0",
+    "react-aws-s3": "^1.5.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.2",
+    "react-dropzone-uploader": "^2.11.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
