Building the Login Page

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 SKIP_PREFLIGHT_CHECK=true
 DATABASE_URL=mongodb+srv://atlasuser31:atlasuser31@sei.ne6hk.mongodb.net/travelspo?retryWrites=true&w=majority
+SECRET=travelspoproject4
