--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^4.8.0",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
@@ -11,22 +12,26 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1195.0",
     "bcrypt": "^5.0.1",
+    "bootstrap": "^5.2.0",
+    "boto3": "^0.0.1",
     "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "html5-file-selector": "^2.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
     "path-browserify": "^1.0.1",
     "querystring-es3": "^0.2.1",
-    "bootstrap": "^5.2.0",
-    "buffer": "^6.0.3",
-    "html5-file-selector": "^2.1.0",
     "react": "^18.2.0",
     "react-aws-s3": "^1.5.0",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.7",
     "react-router-dom": "^6.3.0",
+    "react-s3": "^1.3.1",
     "react-scripts": "5.0.1",
     "serve-favicon": "^2.5.0",
     "styled-components": "^5.3.5",
