--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/node": "^18.7.6",
     "aws-sdk": "^2.1196.0",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.2.0",
     "boto3": "^0.0.1",
@@ -23,6 +24,7 @@
     "express": "^4.18.1",
     "html5-file-selector": "^2.1.0",
     "jsonwebtoken": "^8.5.1",
+    "materialize": "^1.0.0",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
     "path-browserify": "^1.0.1",
