--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "buffer": "^6.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "html5-file-selector": "^2.1.0",
     "jsonwebtoken": "^8.5.1",
     "materialize": "^1.0.0",
@@ -73,5 +74,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:8080"
+  "proxy": "http://localhost:8080"
 }
