--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 SKIP_PREFLIGHT_CHECK=true
-DATABASE_URL=mongodb+srv://atlasuser31:atlasuser31@sei.ne6hk.mongodb.net/Travelspo?retryWrites=true&w=majority
-SECRET=travelspoproject4
-REACT_APP_BUCKET_NAME=travelspo1
-REACT_APP_REGION=ca-central-1
-REACT_APP_ACCESS=AKIATLTUMCJPOYNHAF4Z
-REACT_APP_SECRET=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
+DATABASE_URL=mongodb+srv://atlasuser31:atlasuser31@sei.ne6hk.mongodb.net/Travelspo-Ram?retryWrites=true&w=majority
+SECRET=travelspoproject5
+REACT_APP_BUCKET_NAME=travelspo-app
+REACT_APP_REGION=us-east-1
+
+
+AWS_ACCESS_KEY_ID=AKIAZHSTERUY7GSKFRPG
+AWS_SECRET_ACEESS_KEY=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
