--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "boto3": "^0.0.1",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
-    "dotenv": "^16.0.1",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "html5-file-selector": "^2.1.0",
@@ -48,6 +49,7 @@
     "styled-components": "^5.3.5",
     "timers-browserify": "^2.0.12",
     "url": "^0.11.0",
+    "util": "^0.12.4",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "webpack": "^4.44.2"
